added read collection routes
